# Ironclad-Agent-Ledger

./: .env.example  .gitignore  COMMERCIAL.md  Cargo.toml  LICENSE  README.md  audit_policy.example.toml  build.rs  docker-compose.test.yml  server_config.txt
.github/workflows/: release.yml
.ironclad/keys/: session-6b134362-d191-42ce-90cc-3d3eef7c65eb.key
crates/core/: Cargo.toml
crates/core/src/: lib.rs  policy.rs  schema.rs
crates/guest/: Cargo.toml
crates/guest/src/: main.rs
crates/host/: Cargo.toml  build.rs
crates/host/migrations/: 20250219000002_create_agent_snapshots.sql  20250219000004_create_agent_sessions.sql  20250219000006_add_policy_hash_to_sessions.sql
crates/host/policies/: README.md  owasp-top10.toml  pci-dss-audit.toml  soc2-audit.toml
crates/host/src/: agent.rs  certificate.rs  cloud_creds.rs  config.rs  db_setup.rs  guard.rs  guard_process.rs  index.html  ledger.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  output_scanner.rs  policy.rs  report.rs  sandbox.rs  server.rs  signing.rs  snapshot.rs  tripwire.rs  wakeup.rs  webhook.rs
crates/host/src/llm/: anthropic.rs  mod.rs
crates/host/tests/: agent_loop.rs  ledger_integrity.rs  two_phase_commit.rs
docs/: schema.md
migrations/: 20250219000001_create_agent_events.sql  20250219000003_create_agent_action_log.sql  20250219000005_add_session_id_to_events.sql  20250219000007_add_event_signing.sql
policies/: README.md  owasp-top10.toml  pci-dss-audit.toml  soc2-audit.toml
scripts/: test-integration.sh
src/: agent.rs  approvals.rs  certificate.rs  cloud_creds.rs  config.rs  db_setup.rs  executor.rs  guard.rs  guard_process.rs  hash.rs  index.html  intent.rs  ledger.rs  lib.rs  llm.rs  main.rs  merkle.rs  metrics.rs  ollama.rs  orchestrator.rs  ots.rs  output_scanner.rs  policy.rs  red_team.rs  report.rs  sandbox.rs  schema.rs  server.rs  signing.rs  snapshot.rs  tripwire.rs  wakeup.rs
src/llm/: mod.rs  ollama.rs  openai.rs
tests/: agent_loop.rs  ledger_integrity.rs  snapshot_restore.rs  two_phase_commit.rs
tests/common/: mod.rs
