[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Björn Roman Kohlberger"]

[workspace]
members = [
    "crates/core",
    "crates/host",
]
# crates/guest targets riscv32im-succinct-zkvm-elf and must not be compiled for
# the host architecture.  It is built exclusively by the host's build.rs via
# sp1_build when the `zk` feature is enabled.
exclude = ["crates/guest"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2          = "0.10"
hex           = "0.4"
bincode       = "1"
tracing       = "0.1"
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
toml          = "0.8"
url           = "2"
ipnetwork     = "0.20"
regex-lite    = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }