[package]
name = "ironclad_core"
version = "0.5.0"
edition = "2024"
description = "Shared pure logic for the Ironclad Agent Ledger: hashing, Merkle trees, schemas, and policy evaluation"

[dependencies]
sha2       = "0.10"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1"
regex-lite = "0.1"
tracing    = "0.1"
toml       = "0.8"
url        = "2"
ipnetwork  = "0.20"